tests/grammar/types/var_type_annotation/type_fail_2/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:2:1
  |
2 | _name = "s"
  | ^ expected int, got str(s)
  |